--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <header class="row">
       <div class="col-md-12">
-        <h1><u><b>Narrow Down Your Chinese Menu Choice</b></u></h1>
+        <h1 class="bs"><u><b>Narrow Down Your Chinese Menu Choice</b></u></h1>
 
         
       </div>
