--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
           <h2>Search menu</h2>
           <div class="bs">
-            <input type="text" id="searchFor" ng-model="search.searchFor" class="form-control" placeholder="search term" />
+            <input type="text" id="searchFor" ng-model="search.searchFor" class="form-control" placeholder="search term (all small caps)" />
           <button ng-click="search.search()" class="bt"><span>Narrow It Down For Me!</span></button>
           </div>
         </div>
